--- a/index.css
+++ b/index.css
@@ -12,9 +12,20 @@
    color:goldenrod; 
    text-align: center;
    font-family: Georgia, 'Times New Roman', Times, serif;
-   margin-top: 50px;
-   margin-bottom: 50px;
-   margin-left: 50px;
-   margin-right: 50px;
-   padding:2px ;
+   font-size: 18px;
 }
+.html{
+   border-radius: 500px;
+
+}
+
+.register {
+    border-radius: 50px;
+}
+
+.home_txt {
+    
+}
+.gallery{
+    text-align: center;
+    text-decoration: underline;
